fix body overflow

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -28,6 +28,7 @@ body {
     font-size: 16px;
     color: var(--color-text);
     background-color: var(--color-primary);
+    overflow-x: hidden;
 }
 
 /* Navigation */
